--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,25 @@
-name: Python Tests
+name: Python Tests  # Name of the workflow, visible in the Actions tab
 
-on: [push, pull_request]
+on: [push, pull_request]  # Triggers the workflow on push or pull request events
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # The workflow will run on the latest version of Ubuntu
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout code  # This step checks out the code from the repository
+      uses: actions/checkout@v2  # Using the checkout action at version 2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
+    - name: Set up Python  # This step sets up Python in the environment
+      uses: actions/setup-python@v4  # Uses the setup-python action at version 4
       with:
-        python-version: '3.8'
+        python-version: '3.8'  # Specifies that Python 3.8 will be set up
 
-    - name: Install dependencies
+    - name: Install dependencies  # This step installs the project dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install --upgrade pip  # Upgrades pip to the latest version
+        pip install -r requirements.txt  # Installs dependencies from the requirements.txt file
 
-    - name: Run tests
+    - name: Run tests  # This step runs the tests using pytest
       run: |
-        pytest tests/
+        pytest tests/  # Runs pytest on the tests directory
